erDiagram
    USERS ||--o{ USER_ROLES : "has"
    ROLES ||--o{ USER_ROLES : "assigned to"
    PARTNERS ||--o{ CLIENTS : "manages"
    CLIENTS ||--o{ ADDITIONAL_CHARGES : "receives"
    CHARGE_TYPES ||--o{ ADDITIONAL_CHARGES : "defines"
    CLIENTS ||--o{ ATTENDANCE : "records"
    CLIENTS ||--o{ GROUP_ACTIVITY_ATTENDANCE : "attends"
    GROUP_ACTIVITIES ||--o{ GROUP_ACTIVITY_ATTENDANCE : "includes"

    USERS {
        bigint id PK
        string email UK
        string password_hash
        string name
        boolean active
        timestamp created_at
    }

    ROLES {
        bigint id PK
        string name UK
    }

    USER_ROLES {
        bigint user_id PK, FK
        bigint role_id PK, FK
    }

    PARTNERS {
        bigint id PK
        string name UK
    }

    CLIENTS {
        bigint id PK
        bigint partner_id FK
        string dni UK
        string name
        string phone
        string gender
        date birth_date
        boolean near_location
        boolean promo_friends
        date registration_date
        date contract_start_date
        int contract_period
        boolean group_visit
        boolean active
        tinyint last_prediction_churn
        decimal last_prediction_probability
        timestamp last_prediction_timestamp
    }

    CHARGE_TYPES {
        bigint id PK
        string name UK
    }

    ADDITIONAL_CHARGES {
        bigint id PK
        bigint client_id FK
        bigint charge_type_id FK
        decimal amount
        date charge_date
    }

    ATTENDANCE {
        bigint id PK
        bigint client_id FK
        timestamp checked_in_at
    }

    GROUP_ACTIVITIES {
        bigint id PK
        string name UK
    }

    GROUP_ACTIVITY_ATTENDANCE {
        bigint id PK
        bigint client_id FK
        bigint group_activity_id FK
        timestamp attendance_date
    }

